# transcriber-api

./: .gitignore  Dockerfile  Dockerfile.worker  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  prometheus.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  middleware.py  router.py
app/api/v1/: health.py  jobs.py  transcriptions.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/services/: __init__.py  asr.py  formatters.py  jobs.py  media.py  runpod.py  youtube.py
app/workers/: __init__.py  transcription_worker.py
tests/: __init__.py  conftest.py  test_api_health.py  test_api_jobs.py  test_api_media.py  test_api_youtube.py  test_formatters.py  test_services.py  test_youtube_service.py
