[tool.poetry]
name = "transcriber-api"
version = "1.0.0"
description = "Production-ready API for transcribing media files with YouTube captions fast-path and ASR fallback"
authors = ["Developer"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
youtube-transcript-api = "^0.6.2"
yt-dlp = "^2024.1.0"
faster-whisper = "^1.0.0"
httpx = "^0.26.0"
aiofiles = "^23.2.1"
redis = "^5.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
slowapi = "^0.1.9"
prometheus-client = "^0.19.0"
structlog = "^24.1.0"
tenacity = "^8.2.3"
boto3 = "^1.34.0"
aiohttp = "^3.9.0"
celery = {extras = ["redis"], version = "^5.3.6"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.26.0"
respx = "^0.20.2"
fakeredis = "^2.20.1"
ruff = "^0.1.13"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
